--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -1,24 +1,112 @@
 # A #
 
+### ÅHFELDT, L. ###
 
+* Åhfeldt, Laila Kitzler (2002). 'Individual Variability in Rune Carving on Rock: A Comparison Between Individuals and Workshops' (pp. 79-101) in the *Journal of Nordic Archaeological Science*, No.13, 2002. 
+
+**Purport:**
+...
+
+### ABRAM, C. ###
+
+* Abram, Christopher (2003). 'Representations of the Pagan Afterlife in Medieval Scandinavian Literature'. Dissertation. Robinson College, Cambridge, England, U.K.: University of Cambridge.
+
+**Purport:**
+...
+
+### ACKER, P. ###
+
+* Acker, Paul & Larrington, Carolyne (eds.) (2002). 'The Poetic Edda: Essays on Old Norse Mythology'. Abingdon, Oxon, England, U.K.: Routledge. ISBN 9780815316602 (hbk).
+
+**Purport:**
+...
+
+### ALBERTSSON, A. ###
+
+* Albertsson, Alaric (2017/2018). 'A Handbook of Saxon Sorcery & Magic: Wyrdworking, Rune Craft, Divination & Wortcunning'. \[Previously published in 2011 as 'Wyrdworking: The Path of a Saxon Sorcerer']. Woodbury, Minnesota, U. S. A.: Llewellyn Publications. ISBN: 9780738753584 (e-book).
+
+**Purport:**
+...
+
+### ANDERSON, C. ###
+
+* Anderson, Carl Edlund (2005). 'The Runic System as a Reinterpretation of Classical Influences and as an Expression of Scandinavian Cultural Affiliation'. \[This document outlines that it is "Chapter Four" of a larger work, but doesn't specify the work. On investigation, I have unfortunately been unable to determine the work from which the chapter has been extracted.]
+
+**Purport:**
+...
+
+### ANDRSSON, W. ###
+
+* Andrsson, Wigheaðr T. (2019). ‘Hávamál: Nordic Wisdom in English, Old Norse, and Younger Futhark’. The book was independently published. ISBN 9781089325833.
+
+**Purport:**
+...
+
+### ANDRÉN, A.; *et al.* ###
+
+* Andrén, Anders; *et al*. (ed.) (2006). ‘Old Norse Religion in Long-term Perspectives’. Nordic Academic Press. 
+
+**Purport:**
+...
 
 # B #
 
+
+**Purport:**
+...
+
 # C #
+
+
+**Purport:**
+...
 
 # D #
 
+
+**Purport:**
+...
+
 # E #
+
+**Purport:**
+...
+
 
 # F #
 
+
+
+**Purport:**
+...
+
 # G #
+
+**Purport:**
+...
+
 
 # H #
 
+
+**Purport:**
+...
+
 # I #
+
+**Purport:**
+...
+
 
 # J #
 
+
+**Purport:**
+...
+
+
+
 # K #
 
+**Purport:**
+...
