--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -49,7 +49,108 @@
 **Purport:**
 ...
 
+### ANDROSHCHUK, F.; *et al* ###
+
+* Androshchuk, Fedir; Shepard, Jonathan & White, Monica (eds.) (2016). 'Byzantium and the Viking World'. Acta Universitatis Upsaliensis: Studia Byzantina Upsaliensia, Vol. 16. Uppsala, Sweden: Uppsala Universitet. ISBN 9789155494629.
+
+**Purport:**
+...
+
+* Anlezark, Daniel (ed.) (2011). 'Myths, Legends, and Heroes: Essays on Old Norse and Old English Literature in Honour of John McKinnell'. Toronto, Canada: University of Toronto Press. ISBN 9780802099471.
+
+**Purport:**
+...
+
+### ANTHONY, D. ###
+
+* Anthony, David W. (2007). ‘The Horse the Wheel and Language: How Bronze-Age Riders from the Eurasian Steppes Shaped the Modern World’. Princeton, New Jersey, U.S.A.: Princeton University Press. Source: https://archive.org/details/horsewheelandlanguage/mode/1up (accessed: Friday October 20, 2023)
+
+**Purport:**
+...
+
+### ANTONSEN, E. ###   
+
+* Antonsen, Elmer H. (2002). 'Runes and Germanic Linguistics'. Trends in Linguistics: Studies and Monographs; 140. New York, U.S.A.: Mouton de Gruyter. ISBN 3110174629.
+                                                                                                              
+**Purport:**
+...                                                                                                             
+
+### ARMITAGE, L. ###
+
+* Armitage, Lionel (1911). 'An Introduction to the Study of Old High German'. Oxford, England, U.K.: Henry Frowe, At the Clarendon Press.
+
+**Purport:**
+...
+
+
+
+
 # B #
+
+### BAER, P. ###
+
+* Baer, Patricia Ann (2013). 'An Old Norse Image Hoard: From the Analog Past to the Digital Present'. Thesis. University of Victoria.
+
+**Purport:**
+...
+
+### BALCHIN, R. ###
+
+* Balchin, Rachel (2021). 'Narrative Threads: Written Textiles in Old Norse Prose and Poetry'. Thesis. University of Leicester.
+
+**Purport:**
+...
+
+### BARBER, E. ###
+
+* Barber, E.J.W. (1991). 'Prehistoric Textiles: The Development of Cloth in the Neolithic and Bronze Ages with Special Reference to the Aegean'. Princeton, New Jersey, U. S. A.: Princeton University Press. ISBN 9780691002248.
+
+**Purport:**
+...
+
+### BARNES, G.; *et al.* ###
+
+* Barnes, Geraldine & Ross, Margaret Clunies (eds.) (2000). 'Old Norse Myths, Literature and Society: Proceedings of the 11th International Saga Conference 2 - 7 July 2000, University of Sydney'. Sydney, N.S.W., Australia: Centre for Medieval Studies, University of Sydney. ISBN 1864873167.
+
+**Purport:**
+...
+
+### BARNES, M. ###
+
+* Barnes, Michael P. (2012). ‘Runes, A Handbook’. The Boydell Press.     
+
+**Purport:**
+...
+                              
+* Barnes, Michael (2013). 'What is Runology, and Where Does It Stand Today?' (pp. ?) in *Futhark: International Journal of Runic Studies*, Containing Proceedings of the Seventh International Symposium on Runes and Runic Inscriptions, Oslo, 9 - 14 August 2010. Vol. 4, 2013. ISSN 1892-0950. Source: http://www.futhark-journal.com/issues/ (accessed: Monday October 23, 2023)
+
+**Purport:**
+...
+
+### BARRET, J.; *et al.* ###
+
+* Barrett, James H. & Gibbon, Sarah J. (eds.) (2016). 'Maritime Societies of the Viking and Medieval World'. Abingdon, Oxon, England, U.K.: Routledge. ISBN 9781315630755 (eISBN).
+
+**Purport:**
+...
+
+### BARTUSIK, G. ###
+
+* Bartusik, Grzegorz (2022). 'Graeco-Roman Metaphor of Human Fate as a Fabric Woven and Thread Spun by Supernatural Beings in Medieval Icelandic Contexts' (pp. 13-31) in *Studia Scandinavica*, Vol. 26, No. 6. 
+
+**Purport:**
+...
+
+### BAUSCHATZ, P. ###
+
+* Bauschatz, Paul C. (1982). 'The Well and the Tree: World and Time in Early Germanic Culture'. Amherst, Massachusetts, U.S.A.: The University of Massachusetts Press. ISBN 0870233521.
+
+**Purport:**
+...
+
+
+
+
 
 
 **Purport:**
