--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -148,9 +148,57 @@
 **Purport:**
 ...
 
+### BEK-PEDERSEN, K. ###
 
+* Bek-Pedersen, K. (2011). ‘The Norns in Old Norse Mythology’. Dunedin Academic Press.
 
+**Purport:**
+...
 
+### BENNETT, J. ###
+
+* Bennett, J.G. (1997). ‘The Dramatic Universe, Vol. II The Foundations of Moral Philosophy’. Bennett Books USA. 
+
+**Purport:**
+...
+                                                                                                      
+* Bennett, J.G. (1991). ‘Hazard, the Risk of Realization’. Bennett Books. 
+
+**Purport:**
+...
+
+### BIRKETT. T. ###
+
+* Birkett, Tom (2017). 'Reading the Runes in Old English and Old Norse Poetry'. Abingdon, Oxon, England. U.K.: Routledge. ISBN 9781315603780 (ebk).
+
+**Purport:**
+...
+
+### BLOMFIELD, J. ###
+
+* Blomfield, Joan (1945). 'Runes and the Gothic Alphabet' (pp. 177-194, 209-231) in *The Saga-Book of the Viking Society for Northern Research*, Vol. 12, 1945. Kendal, England, U.K.: Viking Society for Northern Research.    
+
+**Purport:**
+...
+
+### BLUM, R. ###
+
+* Blum, Ralph H. (1982). 'The Book of Runes: A Compass for Navigating in Turbulent Times'. BetterListen LLC.
+
+**Purport:**
+...
+
+* Blum, Ralph (1982, 1993). 'The Book of Runes: A Handbook for the Use of an Ancient Oracle: The Viking Runes'. 10th Anniversary Edition. New York, U.S.A.: St. Martin's Press. ISBN 9780312108199.
+
+**Purport:**
+...
+
+### BOGACHEV, R.; *et al.* ###
+
+* Bogachev, Roman E.; Fedyunina, Inna E.; Shemaeva, Elena V.; Smirnova, Daria E.; and Danilenko, Ilya A. (2020). 'Linguistic Worldview of Ancient Germans Through the Runic Writing System' in (pp. ?) *Individual and Society in the Modern Geopolitical Environment*. December, 2020, EPSBS, Vol. 99. Source: https://www.europeanproceedings.com/article/10.15405/epsbs.2020.12.04.15 (accessed: Friday October 27, 2023)
+
+**Purport:**
+...
 
 
 **Purport:**
