--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -201,10 +201,53 @@
 ...
 
 
+Braithwaite-Westoby, Manu (2014). 'Images from Old Norse Mythology and Legend on Anglo-Scandinavian and Scandinavian Stone Sculpture and some Wood Objects'. Thesis. Sydney, N. S. W., Australia: University of Sydney.
+
+**Purport:**
+...
+
+Bray, Olive (1908). 'The Elder or Poetic Edda, commonly known as Sæmund's Edda. Part 1. The Mythological Poems' . Edited and translated with introduction and notes. Illustrated by W. G. Collingwood. The Viking Club, King's Weighhouse Rooms, London. Source: https://archive.org/details/TheElderOrPoeticEdda/mode/2up (accessed: Saturday October 21, 2023)
+
+**Purport:**
+...
+
+Brink, Stefan & Collision, Lisa (eds.) (2017). 'Theorizing Old Norse Myth'. Turnhout, Belgium: Brepols Publishers. ISBN: 978-2-503-55421-1
+
+**Purport:**
+...
+
+Britannica Editors (2023). 'Norman People' in Encyclopædia Britannica [online]. Source: https://www.britannica.com/topic/Norman-people
+(accessed: Friday November 3, 2023)
+
+**Purport:**
+...
+
+Brodeur,  Arthur G. (1923) ‘The Prose Edda’. Oxford University Press.
+
+**Purport:**
+...
+
+Brunning, Sue (2016). 'A "Divination Staff" from Viking-Age Norway at the British Museum' in Acta Archaeologica, Vol. 87, Issue 1. Brill, pp. 193 - 200.
+
+**Purport:**
+...
+
+Bryant, Edwin F. & Patton, Laurie L. (eds.) (2005). 'The Indo-Aryan Controversy: Evidence and Inference in Indian History'. Abingdon, Oxon, U. K.: Routledge. ISBN: 0-203-64188-4. 
+
+**Purport:**
+...
+
 **Purport:**
 ...
 
 # C #
+
+### CRIST, S.; *et al.* ###
+
+* Crist, Sean (ed. & arr.); Toller, T. Northcote (supp. & ed.); & Bosworth, Joseph (auth. & comp.) (2019). ‘Bosworth-Toller: Anglo-Saxon Dictionary [Online]’. (NB: This project is based on a digital edition of 'An Anglo-Saxon dictionary', based on the manuscript collections of the late Joseph Bosworth - the so called Main Volume, first edition 1898 and its Supplement, first edition 1921, edited by Joseph Bosworth and T. Northcote Toller, today the largest complete dictionary of Old English and one day to be hopefully supplanted by the DOE. Alistair Campbell's "enlarged addenda and corrigenda" from 1972 are not public domain and are therefore not part of the online dictionary. Please see the front & back matter of the paper dictionary for further information, prefaces and lists of references & contractions.). Source: http://bosworth.ff.cuni.cz/ (accessed: Tuesday, July 08, 2025)
+
+**Purport:**
+...
 
 
 **Purport:**
