--- a/bibliography/l_to_z_v1_05072025.md
+++ b/bibliography/l_to_z_v1_05072025.md
@@ -2,6 +2,35 @@
 
 ...
 
+# M #
+
+# N #
+
+# O #
+
+# P #
+
+# Q #
+
+# R #
+
+# S #
+
+# T #
+
+
+Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary: Based on the Manuscript Collections of the late Joseph Bosworth (Supplement)'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio00tolluoft (accessed: Tuesday, July 08, 2025)
+
+# U #
+
+# V #
+
+# W #
+
+# X #
+
+# Y #
+
 # Z #
 
 * Zimmermann, Sebastien (2023). 'Runic Cryptography in Early Epigraphic Period (200-700)' (pp. 190-198) in Dahlke, Carola & Göggerle, Matthias (eds.) (2023). *HistoCrypt 2023: Proceedings of the 6th International Conference on Historical Cryptology HistoCrypt 2023*. Conference: June, 20-22, 2023,  Munich. NEALT Proceedings Series No. 50. Linköping Electronic Conference Proceedings No. 195. University of Tartu, Tartu, Estonia: Northern European Association for Language Technology (NEALT) in conjunction with DSpace at Tartu University Library (University of Tartu, Estonia). DOI: https://doi.org/10.3384/ecp195 ISBN 9789180751346 (PDF). Source: https://ecp.ep.liu.se/index.php/histocrypt (accessed: Sunday, July 06, 2025)  
