--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -200,39 +200,58 @@
 **Purport:**
 ...
 
+### BOSWORTH, J.; *et al.* ###
 
-Braithwaite-Westoby, Manu (2014). 'Images from Old Norse Mythology and Legend on Anglo-Scandinavian and Scandinavian Stone Sculpture and some Wood Objects'. Thesis. Sydney, N. S. W., Australia: University of Sydney.
-
-**Purport:**
-...
-
-Bray, Olive (1908). 'The Elder or Poetic Edda, commonly known as Sæmund's Edda. Part 1. The Mythological Poems' . Edited and translated with introduction and notes. Illustrated by W. G. Collingwood. The Viking Club, King's Weighhouse Rooms, London. Source: https://archive.org/details/TheElderOrPoeticEdda/mode/2up (accessed: Saturday October 21, 2023)
+* Bosworth, Joseph (auth. & comp.) & Toller, T. Northcote (ed. & supp.) (1964, 1954, 1929, 1898). 'An Anglo-Saxon Dictionary: Based on the Manuscript Collections of the late Joseph Bosworth (Edited & Enlarged)'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio0000bosw_r3q2 (accessed: Tuesday, July 08, 2025)
 
 **Purport:**
 ...
 
-Brink, Stefan & Collision, Lisa (eds.) (2017). 'Theorizing Old Norse Myth'. Turnhout, Belgium: Brepols Publishers. ISBN: 978-2-503-55421-1
+### BRAITHWAITE-WESTOBY, M. ###
+
+* Braithwaite-Westoby, Manu (2014). 'Images from Old Norse Mythology and Legend on Anglo-Scandinavian and Scandinavian Stone Sculpture and some Wood Objects'. Thesis. Sydney, N.S.W., Australia: University of Sydney.
 
 **Purport:**
 ...
 
-Britannica Editors (2023). 'Norman People' in Encyclopædia Britannica [online]. Source: https://www.britannica.com/topic/Norman-people
-(accessed: Friday November 3, 2023)
+### BRAY, O. ###
+
+* Bray, Olive (trans. & comm.) & Collingwood, W. G. (illus.) (1908). 'The Elder or Poetic Edda, commonly known as Sæmund's Edda. Part 1. The Mythological Poems'. Edited and translated with introduction and notes. King's Weighhouse Rooms, London, England, U.K.: The Viking Club. Source: https://archive.org/details/TheElderOrPoeticEdda/mode/2up (accessed: Saturday October 21, 2023)
 
 **Purport:**
 ...
 
-Brodeur,  Arthur G. (1923) ‘The Prose Edda’. Oxford University Press.
+### BRINK, S.; *et al.* ###
+
+* Brink, Stefan & Collision, Lisa (eds.) (2017). 'Theorizing Old Norse Myth'. Turnhout, Belgium: Brepols Publishers. ISBN 9782503554211.
 
 **Purport:**
 ...
 
-Brunning, Sue (2016). 'A "Divination Staff" from Viking-Age Norway at the British Museum' in Acta Archaeologica, Vol. 87, Issue 1. Brill, pp. 193 - 200.
+### BRITANNICA ###
+
+* Britannica Editors (2023). 'Norman People' in the *Encyclopædia Britannica [online]*. Source: https://www.britannica.com/topic/Norman-people (accessed: Friday November 3, 2023)
 
 **Purport:**
 ...
 
-Bryant, Edwin F. & Patton, Laurie L. (eds.) (2005). 'The Indo-Aryan Controversy: Evidence and Inference in Indian History'. Abingdon, Oxon, U. K.: Routledge. ISBN: 0-203-64188-4. 
+### BRODEUR, A. ###
+
+* Brodeur, Arthur G. (1923) ‘The Prose Edda’. Oxford University Press.
+
+**Purport:**
+...
+
+### BRUNNING, S. ###
+
+* Brunning, Sue (2016). 'A "Divination Staff" from Viking-Age Norway at the British Museum' (pp. 193-200) in *Acta Archaeologica*, Vol. 87, Issue 1. Brill. 
+
+**Purport:**
+...
+
+### BRYANT, E.; *et al.* ###
+
+* Bryant, Edwin F. & Patton, Laurie L. (eds.) (2005). 'The Indo-Aryan Controversy: Evidence and Inference in Indian History'. Abingdon, Oxon, England, U.K.: Routledge. ISBN 0203641884. 
 
 **Purport:**
 ...
