--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -256,6 +256,30 @@
 **Purport:**
 ...
 
+### BUGGE, S. ###
+
+* Bugge, Sophus (1874). 'Om Runeskriftens Oprindelse' (pp. 485-489) in *Forhandlinger i Videnskabs-Selskabet i Christiania, 1873*. 
+
+**Purport:**
+...
+
+Bugge, Sophis (auth.) & Schofield, William H. (trans.) (1899). 'The Home of the Eddic Poems: with Especial Reference to the Helgi-Lays'. Revised edition with a new introduction concerning Old Norse Mythology by the author. Grimm Library, No. 11. London, U. K.: David Nutt in the Strand.
+
+**Purport:**
+...
+
+Burdick, Ceilidh Elisabeth (2022). 'Women of Fate in the Viking Age: Völur, Valkyries, and the Angel of Death'. Thesis. University of Oslo
+
+**Purport:**
+...
+
+Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary - Supplement'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio00tolluoft (accessed: Tuesday, July 08, 2025)
+
+**Purport:**
+...
+
+
+
 **Purport:**
 ...
 
