--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -4,82 +4,82 @@
 
 * Åhfeldt, Laila Kitzler (2002). 'Individual Variability in Rune Carving on Rock: A Comparison Between Individuals and Workshops' (pp. 79-101) in the *Journal of Nordic Archaeological Science*, No.13, 2002. 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ABRAM, C. ###
 
 * Abram, Christopher (2003). 'Representations of the Pagan Afterlife in Medieval Scandinavian Literature'. Dissertation. Robinson College, Cambridge, England, U.K.: University of Cambridge.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ACKER, P. ###
 
 * Acker, Paul & Larrington, Carolyne (eds.) (2002). 'The Poetic Edda: Essays on Old Norse Mythology'. Abingdon, Oxon, England, U.K.: Routledge. ISBN 9780815316602 (hbk).
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ALBERTSSON, A. ###
 
 * Albertsson, Alaric (2017/2018). 'A Handbook of Saxon Sorcery & Magic: Wyrdworking, Rune Craft, Divination & Wortcunning'. \[Previously published in 2011 as 'Wyrdworking: The Path of a Saxon Sorcerer']. Woodbury, Minnesota, U. S. A.: Llewellyn Publications. ISBN: 9780738753584 (e-book).
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ANDERSON, C. ###
 
 * Anderson, Carl Edlund (2005). 'The Runic System as a Reinterpretation of Classical Influences and as an Expression of Scandinavian Cultural Affiliation'. \[This document outlines that it is "Chapter Four" of a larger work, but doesn't specify the work. On investigation, I have unfortunately been unable to determine the work from which the chapter has been extracted.]
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ANDRSSON, W. ###
 
 * Andrsson, Wigheaðr T. (2019). ‘Hávamál: Nordic Wisdom in English, Old Norse, and Younger Futhark’. The book was independently published. ISBN 9781089325833.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ANDRÉN, A.; *et al.* ###
 
 * Andrén, Anders; *et al*. (ed.) (2006). ‘Old Norse Religion in Long-term Perspectives’. Nordic Academic Press. 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ANDROSHCHUK, F.; *et al* ###
 
 * Androshchuk, Fedir; Shepard, Jonathan & White, Monica (eds.) (2016). 'Byzantium and the Viking World'. Acta Universitatis Upsaliensis: Studia Byzantina Upsaliensia, Vol. 16. Uppsala, Sweden: Uppsala Universitet. ISBN 9789155494629.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 * Anlezark, Daniel (ed.) (2011). 'Myths, Legends, and Heroes: Essays on Old Norse and Old English Literature in Honour of John McKinnell'. Toronto, Canada: University of Toronto Press. ISBN 9780802099471.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ANTHONY, D. ###
 
 * Anthony, David W. (2007). ‘The Horse the Wheel and Language: How Bronze-Age Riders from the Eurasian Steppes Shaped the Modern World’. Princeton, New Jersey, U.S.A.: Princeton University Press. Source: https://archive.org/details/horsewheelandlanguage/mode/1up (accessed: Friday October 20, 2023)
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### ANTONSEN, E. ###   
 
 * Antonsen, Elmer H. (2002). 'Runes and Germanic Linguistics'. Trends in Linguistics: Studies and Monographs; 140. New York, U.S.A.: Mouton de Gruyter. ISBN 3110174629.
                                                                                                               
-**Purport:**
+**Purport:**<br>
 ...                                                                                                             
 
 ### ARMITAGE, L. ###
 
 * Armitage, Lionel (1911). 'An Introduction to the Study of Old High German'. Oxford, England, U.K.: Henry Frowe, At the Clarendon Press.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 
@@ -91,141 +91,141 @@
 
 * Baer, Patricia Ann (2013). 'An Old Norse Image Hoard: From the Analog Past to the Digital Present'. Thesis. University of Victoria.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BALCHIN, R. ###
 
 * Balchin, Rachel (2021). 'Narrative Threads: Written Textiles in Old Norse Prose and Poetry'. Thesis. University of Leicester.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BARBER, E. ###
 
 * Barber, E.J.W. (1991). 'Prehistoric Textiles: The Development of Cloth in the Neolithic and Bronze Ages with Special Reference to the Aegean'. Princeton, New Jersey, U. S. A.: Princeton University Press. ISBN 9780691002248.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BARNES, G.; *et al.* ###
 
 * Barnes, Geraldine & Ross, Margaret Clunies (eds.) (2000). 'Old Norse Myths, Literature and Society: Proceedings of the 11th International Saga Conference 2 - 7 July 2000, University of Sydney'. Sydney, N.S.W., Australia: Centre for Medieval Studies, University of Sydney. ISBN 1864873167.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BARNES, M. ###
 
 * Barnes, Michael P. (2012). ‘Runes, A Handbook’. The Boydell Press.     
 
-**Purport:**
+**Purport:**<br>
 ...
                               
 * Barnes, Michael (2013). 'What is Runology, and Where Does It Stand Today?' (pp. ?) in *Futhark: International Journal of Runic Studies*, Containing Proceedings of the Seventh International Symposium on Runes and Runic Inscriptions, Oslo, 9 - 14 August 2010. Vol. 4, 2013. ISSN 1892-0950. Source: http://www.futhark-journal.com/issues/ (accessed: Monday October 23, 2023)
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BARRET, J.; *et al.* ###
 
 * Barrett, James H. & Gibbon, Sarah J. (eds.) (2016). 'Maritime Societies of the Viking and Medieval World'. Abingdon, Oxon, England, U.K.: Routledge. ISBN 9781315630755 (eISBN).
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BARTUSIK, G. ###
 
 * Bartusik, Grzegorz (2022). 'Graeco-Roman Metaphor of Human Fate as a Fabric Woven and Thread Spun by Supernatural Beings in Medieval Icelandic Contexts' (pp. 13-31) in *Studia Scandinavica*, Vol. 26, No. 6. 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BAUSCHATZ, P. ###
 
 * Bauschatz, Paul C. (1982). 'The Well and the Tree: World and Time in Early Germanic Culture'. Amherst, Massachusetts, U.S.A.: The University of Massachusetts Press. ISBN 0870233521.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BEK-PEDERSEN, K. ###
 
 * Bek-Pedersen, K. (2011). ‘The Norns in Old Norse Mythology’. Dunedin Academic Press.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BENNETT, J. ###
 
 * Bennett, J.G. (1997). ‘The Dramatic Universe, Vol. II The Foundations of Moral Philosophy’. Bennett Books USA. 
 
-**Purport:**
+**Purport:**<br>
 ...
                                                                                                       
 * Bennett, J.G. (1991). ‘Hazard, the Risk of Realization’. Bennett Books. 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BIRKETT. T. ###
 
 * Birkett, Tom (2017). 'Reading the Runes in Old English and Old Norse Poetry'. Abingdon, Oxon, England. U.K.: Routledge. ISBN 9781315603780 (ebk).
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BLOMFIELD, J. ###
 
 * Blomfield, Joan (1945). 'Runes and the Gothic Alphabet' (pp. 177-194, 209-231) in *The Saga-Book of the Viking Society for Northern Research*, Vol. 12, 1945. Kendal, England, U.K.: Viking Society for Northern Research.    
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BLUM, R. ###
 
 * Blum, Ralph H. (1982). 'The Book of Runes: A Compass for Navigating in Turbulent Times'. BetterListen LLC.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 * Blum, Ralph (1982, 1993). 'The Book of Runes: A Handbook for the Use of an Ancient Oracle: The Viking Runes'. 10th Anniversary Edition. New York, U.S.A.: St. Martin's Press. ISBN 9780312108199.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BOGACHEV, R.; *et al.* ###
 
 * Bogachev, Roman E.; Fedyunina, Inna E.; Shemaeva, Elena V.; Smirnova, Daria E.; and Danilenko, Ilya A. (2020). 'Linguistic Worldview of Ancient Germans Through the Runic Writing System' in (pp. ?) *Individual and Society in the Modern Geopolitical Environment*. December, 2020, EPSBS, Vol. 99. Source: https://www.europeanproceedings.com/article/10.15405/epsbs.2020.12.04.15 (accessed: Friday October 27, 2023)
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BOSWORTH, J.; *et al.* ###
 
 * Bosworth, Joseph (auth. & comp.) & Toller, T. Northcote (ed. & supp.) (1964, 1954, 1929, 1898). 'An Anglo-Saxon Dictionary: Based on the Manuscript Collections of the late Joseph Bosworth (Edited & Enlarged)'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio0000bosw_r3q2 (accessed: Tuesday, July 08, 2025)
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BRAITHWAITE-WESTOBY, M. ###
 
 * Braithwaite-Westoby, Manu (2014). 'Images from Old Norse Mythology and Legend on Anglo-Scandinavian and Scandinavian Stone Sculpture and some Wood Objects'. Thesis. Sydney, N.S.W., Australia: University of Sydney.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BRAY, O. ###
 
 * Bray, Olive (trans. & comm.) & Collingwood, W. G. (illus.) (1908). 'The Elder or Poetic Edda, commonly known as Sæmund's Edda. Part 1. The Mythological Poems'. Edited and translated with introduction and notes. King's Weighhouse Rooms, London, England, U.K.: The Viking Club. Source: https://archive.org/details/TheElderOrPoeticEdda/mode/2up (accessed: Saturday October 21, 2023)
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BRINK, S.; *et al.* ###
 
 * Brink, Stefan & Collision, Lisa (eds.) (2017). 'Theorizing Old Norse Myth'. Turnhout, Belgium: Brepols Publishers. ISBN 9782503554211.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BRITANNICA ###
@@ -233,27 +233,27 @@
 * Britannica Editors (2023). 'Norman People' in the *Encyclopædia Britannica [online]*. Source: https://www.britannica.com/topic/Norman-people (accessed: Friday November 3, 2023)
 
 **Purport:**
-...
+...<br>
 
 ### BRODEUR, A. ###
 
 * Brodeur, Arthur G. (1923) ‘The Prose Edda’. Oxford University Press.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BRUNNING, S. ###
 
 * Brunning, Sue (2016). 'A "Divination Staff" from Viking-Age Norway at the British Museum' (pp. 193-200) in *Acta Archaeologica*, Vol. 87, Issue 1. Brill. 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BRYANT, E.; *et al.* ###
 
 * Bryant, Edwin F. & Patton, Laurie L. (eds.) (2005). 'The Indo-Aryan Controversy: Evidence and Inference in Indian History'. Abingdon, Oxon, England, U.K.: Routledge. ISBN 0203641884. 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 ### BUGGE, S. ###
@@ -265,22 +265,22 @@
 
 Bugge, Sophis (auth.) & Schofield, William H. (trans.) (1899). 'The Home of the Eddic Poems: with Especial Reference to the Helgi-Lays'. Revised edition with a new introduction concerning Old Norse Mythology by the author. Grimm Library, No. 11. London, U. K.: David Nutt in the Strand.
 
-**Purport:**
+**Purport:**<br>
 ...
 
 Burdick, Ceilidh Elisabeth (2022). 'Women of Fate in the Viking Age: Völur, Valkyries, and the Angel of Death'. Thesis. University of Oslo
 
-**Purport:**
+**Purport:**<br>
 ...
 
 Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary - Supplement'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio00tolluoft (accessed: Tuesday, July 08, 2025)
 
-**Purport:**
+**Purport:**<br>
 ...
 
 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 # C #
@@ -289,22 +289,22 @@ Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary - Suppleme
 
 * Crist, Sean (ed. & arr.); Toller, T. Northcote (supp. & ed.); & Bosworth, Joseph (auth. & comp.) (2019). ‘Bosworth-Toller: Anglo-Saxon Dictionary [Online]’. (NB: This project is based on a digital edition of 'An Anglo-Saxon dictionary', based on the manuscript collections of the late Joseph Bosworth - the so called Main Volume, first edition 1898 and its Supplement, first edition 1921, edited by Joseph Bosworth and T. Northcote Toller, today the largest complete dictionary of Old English and one day to be hopefully supplanted by the DOE. Alistair Campbell's "enlarged addenda and corrigenda" from 1972 are not public domain and are therefore not part of the online dictionary. Please see the front & back matter of the paper dictionary for further information, prefaces and lists of references & contractions.). Source: http://bosworth.ff.cuni.cz/ (accessed: Tuesday, July 08, 2025)
 
-**Purport:**
+**Purport:**<br>
 ...
 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 # D #
 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 # E #
 
-**Purport:**
+**Purport:**<br>
 ...
 
 
@@ -312,36 +312,36 @@ Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary - Suppleme
 
 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 # G #
 
-**Purport:**
+**Purport:**<br>
 ...
 
 
 # H #
 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 # I #
 
-**Purport:**
+**Purport:**<br>
 ...
 
 
 # J #
 
 
-**Purport:**
+**Purport:**<br>
 ...
 
 
 
 # K #
 
-**Purport:**
+**Purport:**<br>
 ...
