--- a/bibliography/l_to_z_v1_05072025.md
+++ b/bibliography/l_to_z_v1_05072025.md
@@ -4,6 +4,13 @@
 
 # M #
 
+### MAGISTRA, C. ###
+
+* Magistra (Þegnestre), Cynehilda (2021). 'Writing in Runes (with a linguist)'. Independently published: Source: https://medievalhomecompanion.com/wp-content/uploads/2021/03/writing-in-runes-with-a-linguist.pdf (accessed: Wednesday, July 09, 2025)
+
+**Purport:**<br>
+...
+
 # N #
 
 # O #
