--- a/bibliography/l_to_z_v1_05072025.md
+++ b/bibliography/l_to_z_v1_05072025.md
@@ -2,6 +2,9 @@
 
 ...
 
+**Purport:**<br>
+...
+
 # M #
 
 ### MAGISTRA, C. ###
@@ -13,31 +16,82 @@
 
 # N #
 
+
+**Purport:**<br>
+...
+
 # O #
+
+**Purport:**<br>
+...
 
 # P #
 
+**Purport:**<br>
+...
+
 # Q #
+
+**Purport:**<br>
+...
 
 # R #
 
+**Purport:**<br>
+...
+
 # S #
+
+**Purport:**<br>
+...
 
 # T #
 
+### TOLLER, T. ###
 
-Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary: Based on the Manuscript Collections of the late Joseph Bosworth (Supplement)'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio00tolluoft (accessed: Tuesday, July 08, 2025)
+* Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary: Based on the Manuscript Collections of the late Joseph Bosworth (Supplement)'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio00tolluoft (accessed: Tuesday, July 08, 2025)
+
+**Purport:**<br>
+...
+
+### THUN, N. ###
+
+* Thun, Nils (1969). 'The Malignant Elves: Notes on Anglo-Saxon Magic and Germanic Myth' (pp. 378-396) in Hasselrot Bengt (ed.), *et al.* (1969). *Studia Neophilologican A Journal of Germanic and Romance Philology*, Vol. 41, Issue 2, 1969. Uppsala, Sweden: A.B. Lundequistska Bokhandeln. DOI: 10.1080/00393276908587447. Source: http://dx.doi.org/10.1080/00393276908587447 (accessed: Monday, July 21, 2025)
+
+**Purport:**<br>
+...
+
 
 # U #
 
+**Purport:**<br>
+...
+
 # V #
+
+**Purport:**<br>
+...
 
 # W #
 
+**Purport:**<br>
+...
+
 # X #
+
+**Purport:**<br>
+...
 
 # Y #
 
+**Purport:**<br>
+...
+
 # Z #
 
+### ZIMMERMANN, S. ###
+
 * Zimmermann, Sebastien (2023). 'Runic Cryptography in Early Epigraphic Period (200-700)' (pp. 190-198) in Dahlke, Carola & Göggerle, Matthias (eds.) (2023). *HistoCrypt 2023: Proceedings of the 6th International Conference on Historical Cryptology HistoCrypt 2023*. Conference: June, 20-22, 2023,  Munich. NEALT Proceedings Series No. 50. Linköping Electronic Conference Proceedings No. 195. University of Tartu, Tartu, Estonia: Northern European Association for Language Technology (NEALT) in conjunction with DSpace at Tartu University Library (University of Tartu, Estonia). DOI: https://doi.org/10.3384/ecp195 ISBN 9789180751346 (PDF). Source: https://ecp.ep.liu.se/index.php/histocrypt (accessed: Sunday, July 06, 2025)  
+
+**Purport:**<br>
+...
