--- a/bibliography/l_to_z_v1_05072025.md
+++ b/bibliography/l_to_z_v1_05072025.md
@@ -14,6 +14,13 @@
 **Purport:**<br>
 ...
 
+### MALINOWSKI, B. ###
+
+* Malinowski, Bronislaw (1966, 1935). 'The Language of Magic and Gardening'. Indiana University Studies in the History and Theory of Linguistics. Coral Gardens and Their Magic: Vol. II \[2]. With an 'Introduction' by Jack Berry. Second edition. (NB: First published in 1935.). London, England, U.K.: George Allen & Unwin Ltd. Source: https://archive.org/details/dli.ernet.130792 (accessed: Tuesday, July 22, 2025)
+
+**Purport:**<br>
+...
+
 # N #
 
 ### NÖTH, W. ###
