--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -298,6 +298,9 @@ Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary - Suppleme
 
 # D #
 
+### DELVAUX, M. ###
+
+* Delvaux, Matthew C. (2019). 'Transregional Slave Networks of the Northern Arc, 700-900 C.E.'  Ph.D. dissertation. Department of History. Chestnut Hill, Massachusetts, United States: Boston College (Morrissey College of Arts and Sciences). Source: https://ur.bc.edu/islandora/transregional-slave-networks-northern-arc-700-900-ce (accessed: Thursday, July 24, 2025)
 
 **Purport:**<br>
 ...
