--- a/bibliography/a_to_k_v1_08072025.md
+++ b/bibliography/a_to_k_v1_08072025.md
@@ -263,17 +263,25 @@
 **Purport:**
 ...
 
-Bugge, Sophis (auth.) & Schofield, William H. (trans.) (1899). 'The Home of the Eddic Poems: with Especial Reference to the Helgi-Lays'. Revised edition with a new introduction concerning Old Norse Mythology by the author. Grimm Library, No. 11. London, U. K.: David Nutt in the Strand.
+* Bugge, Sophis (auth.) & Schofield, William H. (trans.) (1899). 'The Home of the Eddic Poems: with Especial Reference to the Helgi-Lays'. Revised edition with a new introduction concerning Old Norse Mythology by the author. Grimm Library, No. 11. London, U. K.: David Nutt in the Strand.
 
 **Purport:**<br>
 ...
 
-Burdick, Ceilidh Elisabeth (2022). 'Women of Fate in the Viking Age: Völur, Valkyries, and the Angel of Death'. Thesis. University of Oslo
+### BURDICK, C. ###
+
+* Burdick, Ceilidh Elisabeth (2022). 'Women of Fate in the Viking Age: Völur, Valkyries, and the Angel of Death'. Thesis. University of Oslo
 
 **Purport:**<br>
 ...
 
-Toller, T. Northcote (ed. & supp.) (1921). 'An Anglo-Saxon Dictionary - Supplement'. London, England, U.K.: Oxford University Press. Source: https://archive.org/details/anglosaxondictio00tolluoft (accessed: Tuesday, July 08, 2025)
+### BURCH, P. ###
+
+* Burch, Peter J.W. (2015). 'The Origins of Anglo-Saxon Kingship'. Ph.D. dissertation. Faculty of Humanities: School of Arts, Languages and Cultures. Manchester, England, U.K.: The University of Manchester. Source: https://research.manchester.ac.uk/en/studentTheses/the-origins-of-anglo-saxon-kingship (accessed: Wednesday, August 06, 2025)
+
+**Purport:**<br>
+...
+
 
 **Purport:**<br>
 ...
